--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL=postgresql://postgres:jEwoxtYOFflnmvwccHqVprhQWfjOmKik@postgres.railway.internal:5432/railway
-SESSION_SECRET=replace_with_a_random_string
+SESSION_SECRET=98765
 PORT=3000
