--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "luxon": "^3.6.1",
     "pg": "^8.10.0",
     "uuid": "^11.1.0"
   }
